infra/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: devtracker
  labels:
    name: devtracker
    environment: production
